--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Sparkt.WebApp.Models.ContactUsViewModel
+@{
     ViewBag.Title = "Sparkt";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
