--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -2,48 +2,48 @@
 <div class="work-navigation" id="work-navigation">
     <div class="client-works">
         <ul id="mahindra">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="mahindra-tah.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="mahindra-mmf.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MMF Website</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="3"><a href="mahindra-nfo-launches.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="4"><a href="mahindra-badhat-yojana.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="5"><a href="mahindra-unnati.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("MahindraTah","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MMF Website</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("MahindraNfoLaunches","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("MahindraBadhatYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("MahindraUnnati","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
         </ul>
         <ul id="starplus">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="nayi-soch.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="ted.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="3"><a href="nach-baliye-8.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nach-baliye-8-thum.jpg" alt="" /> <span>Nach Baliye 8</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="4"><a href="pow.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pow-thum.jpg" alt="" /> <span>'POW' Bandhi Yuddh ke</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="5"><a href="jungle-book.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/junglebook-thum.jpg" alt="" /> <span>The Jungle Book</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="6"><a href="dhoni.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ms-dhoni-thum.jpg" alt="" /> <span>M.S. Dhoni</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="7"><a href="womens-day.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/womens-day-thum.jpg" alt="" /> <span>Women's Day</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="8"><a href="made-by-mom.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="" /> <span>Made By Mom</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="9"><a href="ishqbaaaz.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ishqbaaaz-thum.jpg" alt="" /> <span>Ishqbaaaz</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="10"><a href="dance-plus-2.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/danceplus-thum.jpg" alt="" /> <span>Dance+2</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="11"><a href="ikyawann.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("NayiSoch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("NachBaliye8","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nach-baliye-8-thum.jpg" alt="" /> <span>Nach Baliye 8</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("Pow","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/pow-thum.jpg" alt="" /> <span>'POW' Bandhi Yuddh ke</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("JungleBook","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/junglebook-thum.jpg" alt="" /> <span>The Jungle Book</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="6"><a href="@Url.Action("Dhoni","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ms-dhoni-thum.jpg" alt="" /> <span>M.S. Dhoni</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="7"><a href="@Url.Action("WomensDay","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/womens-day-thum.jpg" alt="" /> <span>Women's Day</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="8"><a href="@Url.Action("MadeByMom","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mouthers-day-thum.jpg" alt="" /> <span>Made By Mom</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="9"><a href="@Url.Action("IshqBaaaz","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ishqbaaaz-thum.jpg" alt="" /> <span>Ishqbaaaz</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="10"><a href="@Url.Action("DancePlus2","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/danceplus-thum.jpg" alt="" /> <span>Dance+2</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="11"><a href="@Url.Action("Ikyawann","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ikyawann-thum.jpg" alt="" /> <span>Ikyawann</span> </a> </li>
             <!--  <li class="fadeRight t-animated" data-t-show="10"><a href="ted.php" class="hvr-grow-shadow"><img src="images/thums/ted-thum.jpg" alt=""/> <span>Ted Talks</span> </a> </li>
 
               <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
               <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
         <ul id="star">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="swp.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
         </ul>
         <ul id="oneplus">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="one-plus.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/oneplus-thum.jpg" alt="" /> <span>One Plus</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("OnePlus","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/oneplus-thum.jpg" alt="" /> <span>One Plus</span> </a> </li>
         </ul>
         <ul id="piramal">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="piramal-capital.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramalcapital-thum.jpg" alt="" /> <span>Piramal Capital</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="phfl.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/phfl-thum.jpg" alt="" /> <span>Piramal Housing</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="brickex.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/brickex-thum.jpg" alt="" /> <span>Brickex</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="india-rf.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/india-rf-thum.jpg" alt="" /> <span>India RF</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("PiramalCapital","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramalcapital-thum.jpg" alt="" /> <span>Piramal Capital</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Phfl","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/phfl-thum.jpg" alt="" /> <span>Piramal Housing</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("brickex","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/brickex-thum.jpg" alt="" /> <span>Brickex</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("IndiaRF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/india-rf-thum.jpg" alt="" /> <span>India RF</span> </a> </li>
         </ul>
         <ul id="usports">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="u-sports.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="u-cypher.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="" /> <span>UCypher</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="3"><a href="u-cypher-instafight.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/u-cypher-insta-fight-thum.jpg" alt="" /> <span>UCypher - Insta Fight</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("USports","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("UCypher","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="" /> <span>UCypher</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("UCypherInstafight","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/u-cypher-insta-fight-thum.jpg" alt="" /> <span>UCypher - Insta Fight</span> </a> </li>
         </ul>
         <ul id="boutique">
-            <li class="fadeRight t-animated" data-t-show="1"><a href="bql.php" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
         </ul>
         <!-- <ul id="mgage">
            <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
