--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Sparkt";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<script type="text/javascript">
+    var pageSection = '@ViewBag.PageSection';   
+</script>
 <main>
     <div class="section home-banner dark-blue " id="home">
         <div class="background-video">
